[package]
name = "tinyrss"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.7"
dirs = "5.0"
eframe = { version = "0.21.0", features = ["wgpu"] }
egui = "0.21.0"
feed-rs = "1.3.0"
parking_lot = "0.12.1"
reqwest = { version = "0.11.14" }
rusqlite = { version = "0.28.0", features = ["bundled"] }
tokio = { version = "1.17.0", features = ["rt", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version="0.3.16", features=["env-filter"] }
