[package]
name = "tinyrss"
version = "1.0.1"
authors = ["Denis Borsukov"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/dbsdm/tinyrss"
description = "Small and simple RSS aggregator"
categories = ["gui", "rss"]
keywords = ["news", "feed", "rss", "aggregator", "reader"]
exclude = ["/wix"]

[dependencies]
async-recursion = "1.0.4"
bytes = "1.7.1"
chrono = "0.4.24"
copypasta = "0.8.2"
crossbeam-channel = "0.5.7"
dirs = "5.0"
eframe = "0.21.0"
egui = "0.21.0"
egui-modal = "0.2.2"
feed-rs = "1.3.0"
futures = "0.3.27"
image = "0.24.6"
lazy_static = "1.4.0"
opml = "1.1.5"
parking_lot = "0.12.1"
reqwest = { version = "0.11.14" }
rfd = "0.11.3"
serde = "1.0.159"
serde_yaml = "0.9.19"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "sqlite", "macros"] }
tokio = { version = "1.17.0", features = ["rt", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
unicode-truncate = "0.2.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
